🔧 chore: Refactor general methods validations